<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weatherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/currentLocationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/currentLocationText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentLocationText"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/weatherTypeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/weather"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLocation" />

    <TextView
        android:id="@+id/weatherType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/weatherTypeText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherTypeText"
        app:layout_constraintTop_toBottomOf="@+id/currentLocation" />

    <TextView
        android:id="@+id/weatherDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherType" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/weatherDescriptionText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherDescriptionText"
        app:layout_constraintTop_toBottomOf="@+id/weatherType" />

    <TextView
        android:id="@+id/feelsLikeTempText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/feels_like"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescriptionText" />

    <TextView
        android:id="@+id/feelsLikeTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/feelsLikeTempText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feelsLikeTempText"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescriptionText" />

    <TextView
        android:id="@+id/windSpeedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/wind_speed"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelsLikeTempText" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/feelsLikeTempText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feelsLikeTempText"
        app:layout_constraintTop_toBottomOf="@+id/feelsLikeTempText" />

</androidx.constraintlayout.widget.ConstraintLayout>